# BUDDY_2.0

./: .env.example  .firebaserc  .gitignore  ARCHITECTURE.md  BUDDY_ACCESS_GUIDE.md  CHANGELOG.md  COMPLETE_CONNECTION_GUIDE.md  CONTRIBUTING.md  CROSS_PLATFORM_DEPLOYMENT_GUIDE.md  ENHANCEMENT_SUMMARY.md  FIREBASE_CLOUD_RUN_MIGRATION.md  FRONTEND_BACKEND_CONNECTION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  MOBILE_SETUP_GUIDE.md  Makefile  PHASE_1_IMPLEMENTATION_COMPLETE.md  PHASE_1_VERIFICATION_GUIDE.md  PHASE_7_COMPLETE.md  PHASE_8_VOICE_README.md  Procfile  README.md  README_VOICE_SYSTEM.md  RENDER_DEPLOYMENT.md  SECURITY.md  SECURITY_MODEL.md  advanced_email_demo.py  app.py  basic_cross_platform_demo.py  buddy-frontend-integration.js  buddy_cloud_manager.py  buddy_cross_platform_config.py  buddy_email_test_results_20250827_173645.json  buddy_main.py  buddy_status_test.html  buddy_web_interface.html  buddy_web_server.py  cloud_backend.py  conversations.json  cross_platform_demo.py  debug_notifications.py  (+59 more)
.firebase/: hosting.YXBwc1xkZXNrdG9wXGJ1aWxk.cache
.github/workflows/: build-release.yml  ci.yml  coverage-badge.yml  mobile-ci.yml
apps/car/: README.md
apps/desktop/: README.md  package-electron.json  package-lock.json  package.json
apps/mobile/: README.md  README_NATIVE.md  jest.config.js  package-lock.json  package.json  tsconfig.json
apps/mobile_backup/: README.md  package-lock.json  package.json
apps/mobile_flutter/: README.md  pubspec.yaml
apps/smartwatch/: README.md
apps/tv/: README.md
buddy_core/: __init__.py  runtime.py  sync.py
buddy_core/api/: __init__.py
buddy_core/automotive/: automotive_demo_streamlined.py  automotive_platform_implementation.py
buddy_core/communication/: cross_device_sync.py  message_protocol.py  platform_interfaces.py  platform_sdks.py  unified_communication_hub.py
buddy_core/conversation/: conversation_manager.py
buddy_core/cross_platform/: README.md  intelligence_core.py  pubsub.py  sync_engine.py
buddy_core/database/: __init__.py  change_tracker.py  cloud_db.py  encryption.py  intelligent_sync.py  local_db.py  optimized_local_db.py  performance_monitor.py  sync_engine.py  sync_manager.py  vector_db.py
buddy_core/dialogue/: __init__.py
buddy_core/events/: __init__.py
buddy_core/intelligence/: buddy_intelligence.py  enhanced_response_engine.py
buddy_core/iot/: PHASE_6_IOT_COMPLETE.md  iot_demo_streamlined.py  iot_platform_implementation.py
config/: database.yml  vapid-env.txt  vapid-keys.json
deployment/: deploy.py  deploy_voice_system.ps1  deploy_voice_system.sh  deployment-config.yml  deployment_report_20250827_212909.txt  deployment_report_20250827_214021.txt  install-buddy.bat  install-buddy.sh
docs/: ADVANCED_INTEGRATION_IMPLEMENTATION.md  DYNAMIC_CONFIG_GUIDE.md  DYNAMIC_CONFIG_IMPLEMENTATION.md  MongoDB_Integration_Guide.md  PHASE_2_MOBILE_COMPLETE.md  PHASE_3_SMARTWATCH_COMPLETE.md  PHASE_WISE_INTEGRATION_ROADMAP.md  UNIVERSAL_PORT_MANAGEMENT.md  phase_7_implementation.md
i18n/: __init__.py  translator.py
infrastructure/: metrics.py  middleware.py
integrations/: INTEGRATION_COMPLETE.md  README.md  demo.html
jobs/: scheduler.py
plugins/: registry.py
universal_deployment/: .env.example  DEPLOYMENT_COMPLETE.md  Dockerfile  Dockerfile_simple  INSTALL_DOCKER.md  PRODUCTION_SUCCESS.md  QUICKSTART.md  README.md  check_deployment.bat  core_server.py  core_server_simple.py  deploy.bat  deploy.ps1  deploy.py  deploy_simple.bat  docker-compose-simple.yml  docker-compose.yml  requirements.txt  requirements_simple.txt  test-docker.bat  test_simple.bat
vector/: semantic_index.py
(+169 files in other folders)
