# BUDDY Cross-Platform Package Configurations

[metadata]
name = buddy-ai
version = 1.0.0
description = Advanced AI Assistant with Enhanced Conversation Management
long_description = file: README.md
long_description_content_type = text/markdown
author = BUDDY Team
author_email = contact@buddy.ai
url = https://github.com/buddy-ai/buddy
project_urls =
    Documentation = https://docs.buddy.ai
    Source = https://github.com/buddy-ai/buddy
    Tracker = https://github.com/buddy-ai/buddy/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Communications :: Chat
    Topic :: Office/Business :: Groupware

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires =
    fastapi>=0.100.0
    uvicorn[standard]>=0.20.0
    pydantic>=2.0.0
    transformers>=4.30.0
    torch>=2.0.0
    numpy>=1.24.0
    aiofiles>=23.0.0
    websockets>=11.0.0
    pyyaml>=6.0
    python-multipart>=0.0.6
    jinja2>=3.1.0
    python-jose[cryptography]>=3.3.0
    passlib[bcrypt]>=1.7.4
    python-dateutil>=2.8.0
    requests>=2.31.0
    aiohttp>=3.8.0
    sqlalchemy>=2.0.0
    alembic>=1.11.0
    redis>=4.5.0
    celery>=5.3.0
    click>=8.1.0

[options.packages.find]
where = packages

[options.extras_require]
voice =
    speechrecognition>=3.10.0
    pyttsx3>=2.90
    sounddevice>=0.4.6
    scipy>=1.10.0
    librosa>=0.10.0
    webrtcvad>=2.0.10
desktop =
    electron-python>=1.0.0
    pyqt6>=6.5.0
    tkinter
mobile =
    kivy>=2.2.0
    plyer>=2.1.0
    buildozer>=1.5.0
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.4.0
    pre-commit>=3.3.0
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.3.0

[options.entry_points]
console_scripts =
    buddy = buddy.main:main
    buddy-server = buddy.main:run_server
    buddy-cli = buddy.cli:main
    buddy-config = buddy.config:configure
    buddy-deploy = deployment.deploy:main

[options.package_data]
buddy = 
    *.yaml
    *.yml
    *.json
    templates/*.html
    static/*/*
    skills/*.py
    custom_skills/*.py

# Wheel configuration
[bdist_wheel]
universal = 0

# Test configuration  
[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short

# MyPy configuration
[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True

# Flake8 configuration
[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Coverage configuration
[coverage:run]
source = buddy
omit = 
    */tests/*
    */test_*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
